# detect-emotion

./: .gitignore  Brow_Lowerer.js  CMakeLists.txt  Cheek_Raiser.js  Chin_Raiser.js  Inner_Brow_Raiser.js  Lip_Corner_Depressor.js  Lip_Corner_Puller.js  Lips_Part.js  Makefile  Nose_Wrinkler.js  Outer_Brow_Raiser.js  README.md  Upper_Lid_Raiser.js  configuration.template.cfg  convert.py  detect-emotion.pro  index.html  keytest.cpp  playall.cpp  playone.cpp
header/: actionunit.h  classifier.h  configuration.h  controls.h  endian.h  featureextraction.h  features.h  featurescaling.h  myendian.h  normalization.h  pca.h  pcanalysis.h  pointcloud.h  reader.h  svm.h  training_set.h  utils.h
lib/: CMakeLists.txt  classifier.cpp  featureextraction.cpp  interpolationextraction.cpp  knearest.cpp  randforest.cpp  svm.cpp
masks/: au17.txt  au26.txt  au4.txt  au9.txt
paper/: README.md  interpol.py  paper.tex  preamble.tex  quellen.bib  title.tex
paper/_minted-paper/: DC1425A4D9EDFE9EC8C12A46037F958657050F8D57096A7798B02647BAD1D563.pygtex
paper/chapter/: anhang.tex  vorwort.tex
paper/chapter/01_einleitung/: einleitung.tex
paper/chapter/02_methodik/: cloud_norm.pgf  interpolation_extraction.pgf  methodik.tex  time_differential.pgf
paper/chapter/03_implementierung/: implementierung.tex
paper/chapter/04_ergebnis/: all_au_res.pgf  ergebnis.tex  features.pgf  lip_corner_pull_top.pgf  lips_part_corner_pull.pgf  lips_part_top.pgf
paper/chapter/05_diskussion/: diskussion.tex  f1_vs_positives.pgf  lips_part_lms.pgf  positives_tbl.pgf  time_positives.pgf  trainvsval.pgf
paper/chapter/06_fazit/: fazit.tex
paper/chapter/diskussion/: diskussion.tex  f1_vs_positives.pgf
paper/chapter/einleitung/: einleitung.tex
paper/chapter/ergebnis/: ergebnis.tex  features.pgf  lips_part.pgf  lips_part_corner_pull.pgf  lips_part_f1.pgf  lips_part_top.pgf
paper/chapter/fazit/: fazit.tex
paper/chapter/implementierung/: implementierung.tex
paper/chapter/methodik/: cloud_norm.pgf  interpolation_extraction.pgf  methodik.tex  time_differential.pgf
paper/data/: all_results.py  all_results_train.py
presentation/: beamer.tex  conf.json  meta.sty  wwustyle-moreauthors.sty  wwustyle.sty
presentation/data/: plt_prec_recall.csv  tab_prec_recall.csv
presentation/ff-meta_fuer_latex/: liesmich_FF-Meta.txt
presentation/ff-meta_fuer_latex/texmf/fonts/afm/fontfont/meta/: fMtb8a.afm  fMtr8a.afm  fMtri8a.afm
presentation/ff-meta_fuer_latex/texmf/fonts/map/dvips/meta/: meta.map
presentation/ff-meta_fuer_latex/texmf/fonts/tfm/fontfont/meta/: fMtb7t.tfm  fMtb8a.tfm  fMtb8c.tfm  fMtb8r.tfm  fMtb8t.tfm  fMtbc7t.tfm  fMtbc8t.tfm  fMtbo7t.tfm  fMtbo8c.tfm  fMtbo8r.tfm  fMtbo8t.tfm  fMtr7t.tfm  fMtr8a.tfm  fMtr8c.tfm  fMtr8r.tfm  fMtr8t.tfm  fMtrc7t.tfm  fMtrc8t.tfm  fMtri7t.tfm  fMtri8a.tfm  fMtri8c.tfm  fMtri8r.tfm  fMtri8t.tfm  fMtro7t.tfm  fMtro8c.tfm  fMtro8r.tfm  fMtro8t.tfm
presentation/ff-meta_fuer_latex/texmf/fonts/type1/fontfont/meta/: fMtb8a.pfb  fMtr8a.pfb  fMtri8a.pfb
presentation/ff-meta_fuer_latex/texmf/fonts/vf/fontfont/meta/: fMtb7t.vf  fMtb8c.vf  fMtb8t.vf  fMtbc7t.vf  fMtbc8t.vf  fMtbo7t.vf  fMtbo8c.vf  fMtbo8t.vf  fMtr7t.vf  fMtr8c.vf  fMtr8t.vf  fMtrc7t.vf  fMtrc8t.vf  fMtri7t.vf  fMtri8c.vf  fMtri8t.vf  fMtro7t.vf  fMtro8c.vf  fMtro8t.vf
presentation/ff-meta_fuer_latex/texmf/tex/latex/meta/: 8rfmt.fd  meta.sty  ot1fmt.fd  t1fmt.fd  ts1fmt.fd
src/: CMakeLists.txt  automatic_training.cpp  controls.cpp  keytest.cpp  playall.cpp  playone.cpp  trainer.cpp
src/auto_trainer/: CMakeLists.txt  eval.cpp  eval.h  evalwriter.cpp  evalwriter.h  exampl_config.json  example_eval_config.json  exporter.cpp  exporter.h  main.cpp  processors.cpp  processors.h  train.cpp  train.h  trainparser.cpp  trainparser.h  util.cpp  util.h  wrapper.cpp  wrapper.h
src/qviewer/: CMakeLists.txt  landmarkplayer.qml  landmarkview.qml  main.cpp  main.qml  opendialog.qml  qdataloader.cpp  qdataloader.h  qlandmark.cpp  qlandmark.h  qml.qrc  qpcaanalyse.cpp  qpcaanalyse.h
